syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

service Literature{
	rpc GetLiteratureById(GetLiteratureByIdModel) returns (LiteratureModel);
	rpc GetAllLiterature(GetAllLiteratureRequest) returns (stream LiteratureModel);
}

message GetLiteratureByIdModel{
	int64 literatureId = 1;
}

message GetAllLiteratureRequest{

}

message LiteratureModel{
	int64 literatureId = 1;
	string isbn = 2;
	string name = 3;
	int32 numberOfPages=4;
	int32 publishingYear=5;
	int64 authorId=6;
	int64 publisherId=7;
	int64 genreId=8;
	int64 typeId=9;
	bool isLendable=10;
	int32 lendPeriodInDays=11;
}